--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
-  "name": "nautica",
+  "name": "dog",
   "version": "1.0.0",
-  "license": "ISC"
+  "lockfileVersion": 3,
+  "requires": true,
+  "packages": {
+    "": {
+      "name": "dog",
+      "version": "1.0.0",
+      "license": "ISC"
+    }
+  }
 }
